--- a/frontend/src/app/user/components/user-configuration/user-configuration.component.html
+++ b/frontend/src/app/user/components/user-configuration/user-configuration.component.html
@@ -14,7 +14,7 @@
       <a
         class="cursor-pointer text-primary-500 hover:text-primary-900"
         (click)="scroller.scrollToAnchor('configuration')"
-        >Configuración</a
+        >Mi cuenta</a
       >
       <a
         class="cursor-pointer text-primary-500 hover:text-primary-900"
