--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,8 @@
-<app-feedback></app-feedback>
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="flex flex-col min-h-screen">
+  <app-feedback></app-feedback>
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+  <div class="mt-auto bg-secondary-500">
+    <app-footer></app-footer>
+  </div>
+</div>
