--- a/frontend/src/app/properties/components/properties-list/properties-list.component.html
+++ b/frontend/src/app/properties/components/properties-list/properties-list.component.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="flex flex-row flex-wrap gap-2">
-  <div>
+  <div *ngIf="allowEdition">
     <button
       type="button"
       class="transition ease-in-out delay-50 duration-200 rotate-0"
@@ -23,7 +23,7 @@
         'text-secondary-500 hover:text-primary-500': !newProperty
       }"
     >
-      <fa-icon *ngIf="allowEdition" [icon]="faPlus"></fa-icon>
+      <fa-icon [icon]="faPlus"></fa-icon>
     </button>
     <div
       class="inline-block transition ease-in-out delay-250 duration-200 scale-0"
@@ -36,6 +36,7 @@
     </div>
   </div>
   <button
+    *ngIf="allowEdition"
     type="button"
     (click)="editingProperties = !editingProperties"
     [ngClass]="{
