--- a/frontend/src/app/recipes/components/formulation/formulation.component.html
+++ b/frontend/src/app/recipes/components/formulation/formulation.component.html
@@ -53,7 +53,7 @@
     </div>
     <div class="my-2">
       <h3 class="my-1">Componentes</h3>
-      <span *ngIf="!selectedComposition">Seleccione una composición antes de los componentes</span>
+      <span class="form-errors" *ngIf="!selectedComposition">Seleccione una composición antes de los componentes</span>
       <app-components
         *ngIf="selectedComposition"
         [fromFormulation]="true"
