--- a/frontend/src/app/recipes/components/recipe-item/recipe-item.component.html
+++ b/frontend/src/app/recipes/components/recipe-item/recipe-item.component.html
@@ -9,12 +9,13 @@
     >
       {{ recipe.name }}
     </h4>
-    <div class="flex flex-wrap justify-center text-center">
+    <app-properties-display [properties]="properties"></app-properties-display>
+    <!-- <div class="flex flex-wrap justify-center text-center">
       <span
         class="text-sm group-hover:!text-white-500 text-secondary-500"
         *ngFor="let property of properties"
         >{{ property?.name }}.&nbsp;</span
       >
-    </div>
+    </div> -->
   </app-dashed-box>
 </div>
