--- a/frontend/src/app/recipes/components/recipes/recipes.component.html
+++ b/frontend/src/app/recipes/components/recipes/recipes.component.html
@@ -22,7 +22,7 @@
       ></fa-icon>
     </div>
     <div>
-      <app-properties-list (updateProperties)="searchProperties($event)"></app-properties-list>
+      <app-properties-list [filtering]="true"></app-properties-list>
     </div>
   </div>
   <div class="flex flex-wrap">
