--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -43,6 +43,10 @@ a.router-link-active {
   @apply text-primary-500;
 }
 
+a:hover {
+  @apply cursor-pointer;
+}
+
 .btn {
   @apply rounded-md px-4 py-1 hover:cursor-pointer;
 }
