--- a/frontend/src/app/properties/components/property-item/property-item.component.html
+++ b/frontend/src/app/properties/components/property-item/property-item.component.html
@@ -12,7 +12,7 @@
     *ngIf="editing"
     contenteditable="true"
     (input)="onPropertyChange($event)"
-    class="outline-none underline underline-offset-2 h-[100%] text-xs"
+    class="outline-none underline underline-offset-2 h-[100%] text-sm"
     >{{ property?.name }}</span
   >
   <span *ngIf="!editing">{{ property?.name }}</span>
