--- a/frontend/src/app/compositions/components/composition-form/composition-form.component.html
+++ b/frontend/src/app/compositions/components/composition-form/composition-form.component.html
@@ -56,7 +56,7 @@
       </div>
     </div>
   </div>
-  <div class="flex justify-around">
+  <div class="flex justify-center gap-2">
     <button
       type="submit"
       class="btn btn-primary disabled:cursor-default disabled:bg-primary-300  shadow-thick-secondary"
