--- a/frontend/src/app/compositions/components/compositions-list/compositions-list.component.html
+++ b/frontend/src/app/compositions/components/compositions-list/compositions-list.component.html
@@ -1,4 +1,4 @@
-<div class="text-right">
+<!-- <div class="text-right">
   <button
     type="button"
     class="text-primary-400 hover:text-primary-700 italic"
@@ -6,7 +6,7 @@
   >
     Editar composiciones
   </button>
-</div>
+</div> -->
 
 <div class="flex flex-wrap">
   <div
@@ -27,7 +27,7 @@
     (onEndEdition)="onEndEdition()"
   ></app-composition-form>
   <app-composition-item
-    [editing]="editing"
+    [editing]="true"
     *ngFor="let composition of compositions"
     [composition]="composition"
     [selected]="isSelected(composition.id)"
