delete functions camio de estilo componentes

--- a/frontend/src/app/auth/components/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/auth/components/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <div class="m-auto text-center maxw-500">
-  <div class="m-4 px-6 py-10 rounded-lg full-shadow bg-white-600">
+  <div class="m-4 px-6 py-10 rounded-lg full-shadow bg-basic-600">
     <h2 class="text-2xl uppercase my-5">Forgot password</h2>
     <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()" class="mt-10">
       <div class="my-5 custom-input-labeled">
