--- a/frontend/src/app/components/components/component-item/component-item.component.html
+++ b/frontend/src/app/components/components/component-item/component-item.component.html
@@ -8,7 +8,7 @@
       [ngStyle]="{
         color: percentage > 0 ? '#fff' : phase?.color
       }"
-      class="font-medium group-hover:!text-white-500"
+      class="font-medium group-hover:!text-basic-500"
     >
       {{ component?.name }}
     </h4>
@@ -25,7 +25,7 @@
       <button
         *ngIf="!fromRecipeDetails"
         type="button"
-        class="group-hover:!text-white-500 outline-none"
+        class="group-hover:!text-basic-500 outline-none"
         [ngStyle]="{
           color: percentage > 0 ? '#fff' : phase?.color
         }"
@@ -43,13 +43,13 @@
           [ngStyle]="{
             color: percentage > 0 ? '#fff' : phase?.color
           }"
-          class="outline-none group-hover:!text-white-500 border-none bg-transparent w-[50%] text-right"
+          class="outline-none group-hover:!text-basic-500 border-none bg-transparent w-[50%] text-right"
         />
         <span
           [ngStyle]="{
             color: percentage > 0 ? '#fff' : phase?.color
           }"
-          class="h-[100%] group-hover:!text-white-500 w-[50%]"
+          class="h-[100%] group-hover:!text-basic-500 w-[50%]"
         >
           %
         </span>
@@ -57,7 +57,7 @@
       <button
         *ngIf="!fromRecipeDetails"
         type="button"
-        class="group-hover:!text-white-500 outline-none"
+        class="group-hover:!text-basic-500 outline-none"
         [ngStyle]="{
           color: percentage > 0 ? '#fff' : phase?.color
         }"
