--- a/frontend/src/app/compositions/components/composition-form/composition-form.component.html
+++ b/frontend/src/app/compositions/components/composition-form/composition-form.component.html
@@ -1,7 +1,7 @@
 <form
   [formGroup]="compositionForm"
   (ngSubmit)="onSubmit()"
-  class="bg-white-700 border-2 border-dashed border-secondary-100 rounded-lg p-2 max-w-[300px] m-1"
+  class="bg-basic-700 border-2 border-dashed border-secondary-100 rounded-lg p-2 max-w-[300px] m-1"
 >
   <div class="my-2">
     <div class="flex gap-2 flex-col">
