--- a/frontend/src/app/compositions/components/compositions-list/compositions-list.component.html
+++ b/frontend/src/app/compositions/components/compositions-list/compositions-list.component.html
@@ -11,7 +11,7 @@
 <div class="flex flex-wrap">
   <div
     *ngIf="!isAdding"
-    class="flex flex-col justify-center group hover:border-secondary-300 text-center border-2 border-dashed rounded-lg border-secondary-100 bg-white-900 max-w-[150px] m-1 relative group cursor-pointer"
+    class="flex flex-col justify-center group hover:border-secondary-300 text-center border-2 border-dashed rounded-lg border-secondary-100 bg-basic-900 max-w-[150px] m-1 relative group cursor-pointer"
     (click)="onCreate()"
   >
     <fa-icon
