--- a/frontend/src/app/profiles/components/profile-item/profile-item.component.html
+++ b/frontend/src/app/profiles/components/profile-item/profile-item.component.html
@@ -22,7 +22,7 @@
   <div class="profile-phases flex flex-row gap-1 mb-2">
     <h4
       *ngFor="let phase of profile?.phases"
-      class="text-white-500 rounded-full px-2 py-1 text-sm"
+      class="text-basic-500 rounded-full px-2 py-1 text-sm"
       [ngStyle]="{ 'background-color': phase.color }"
     >
       {{ phase?.name }}
