--- a/frontend/src/app/properties/components/properties-list/properties-list.component.html
+++ b/frontend/src/app/properties/components/properties-list/properties-list.component.html
@@ -8,7 +8,7 @@
   />
   <fa-icon
     [icon]="faSearch"
-    class="absolute top-2 right-0 px-4 fa-2x text-white-900"
+    class="absolute top-2 right-0 px-4 fa-2x text-basic-900"
   ></fa-icon>
 </div>
 
