--- a/frontend/src/app/properties/components/property-form/property-form.component.html
+++ b/frontend/src/app/properties/components/property-form/property-form.component.html
@@ -1,7 +1,7 @@
 <form
   [formGroup]="propertyForm"
   (ngSubmit)="onSubmit()"
-  class="px-2 rounded-full bg-white-900 min-w-[100px]"
+  class="px-2 rounded-full bg-basic-900 min-w-[100px]"
 >
   <input
     type="text"
