--- a/frontend/src/app/recipes/components/recipe-item/recipe-item.component.html
+++ b/frontend/src/app/recipes/components/recipe-item/recipe-item.component.html
@@ -5,14 +5,14 @@
 >
   <app-dashed-box>
     <h4
-      class="font-bold group-hover:!text-white-500 text-secondary-500 uppercase text-center text-lg"
+      class="font-bold group-hover:!text-basic-500 text-secondary-500 uppercase text-center text-lg"
     >
       {{ recipe.name }}
     </h4>
     <app-properties-display [properties]="properties"></app-properties-display>
     <!-- <div class="flex flex-wrap justify-center text-center">
       <span
-        class="text-sm group-hover:!text-white-500 text-secondary-500"
+        class="text-sm group-hover:!text-basic-500 text-secondary-500"
         *ngFor="let property of properties"
         >{{ property?.name }}.&nbsp;</span
       >
