--- a/frontend/src/app/profiles/components/user-profile/user-profile.component.html
+++ b/frontend/src/app/profiles/components/user-profile/user-profile.component.html
@@ -74,7 +74,7 @@
               <button
                 type="button"
                 class="btn btn-secondary  shadow-thick-secondary"
-                (click)="phases.removeAt(i)"
+                (click)="removePhase(i, phaseForm)"
               >
                 <fa-icon [icon]="faTrashAlt"></fa-icon>
               </button>
@@ -106,3 +106,5 @@
     </div>
   </form>
 </div>
+
+<app-modal [id]="getIdModal()" (onProceed)="setWarnGiven()"></app-modal>
