--- a/frontend/src/app/properties/components/properties-display/properties-display.component.html
+++ b/frontend/src/app/properties/components/properties-display/properties-display.component.html
@@ -6,7 +6,7 @@
   }"
 >
   <div
-    class="text-sm group-hover:!text-white-500"
+    class="text-sm group-hover:!text-basic-500"
     *ngFor="let property of properties"
     [ngStyle]="{
       color: selected ? '#fff' : color
