--- a/frontend/src/app/recipes/components/recipes/recipes.component.html
+++ b/frontend/src/app/recipes/components/recipes/recipes.component.html
@@ -5,6 +5,13 @@
       <span class="md:before:content-['|'] md:before:mx-4"
         >{{ recipes?.length || 0 }} componentes</span
       >
+      <!-- <button
+        type="button"
+        (click)="onCreate()"
+        class="btn btn-primary shadow-thick-secondary"
+      >
+        <fa-icon [icon]="faPlus"></fa-icon>
+      </button> -->
     </div>
   </div>
   <div class="flex flex-col mt-2 mb-4">
@@ -18,7 +25,7 @@
       />
       <fa-icon
         [icon]="faSearch"
-        class="absolute top-2 right-0 px-4 fa-2x text-white-900"
+        class="absolute top-2 right-0 px-4 fa-2x text-basic-900"
       ></fa-icon>
     </div>
     <div>
@@ -27,7 +34,7 @@
   </div>
   <div class="flex flex-wrap">
     <div
-      class="flex flex-col justify-center hover:border-secondary-300 text-center border-2 border-dashed rounded-lg border-secondary-100 bg-white-900 max-w-[150px] p-4 m-2 relative cursor-pointer"
+      class="flex flex-col justify-center hover:border-secondary-300 text-center border-2 border-dashed rounded-lg border-secondary-100 bg-basic-900 max-w-[150px] p-4 m-2 relative cursor-pointer"
       (click)="onCreate()"
     >
       <fa-icon
