--- a/frontend/src/app/shared/components/modal/modal.component.html
+++ b/frontend/src/app/shared/components/modal/modal.component.html
@@ -4,7 +4,7 @@
   class="z-10 fixed inset-0 bg-secondary-500/[.2] transition duration-500 transition-opacity invisible opacity-0"
 >
   <div
-    class="translate-y-2/4 mx-auto p-2 md:p-4 bg-white-500 rounded-lg w-[90%] md:w-[50%] max-w-[400px] relative transition ease-in-out duration-500"
+    class="translate-y-2/4 mx-auto p-2 md:p-4 bg-basic-500 rounded-lg w-[90%] md:w-[50%] max-w-[400px] relative transition ease-in-out duration-500"
   >
     <div class="flex flex-row justify-between">
       <h2 #title id="popup-title"></h2>
