--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -52,24 +52,24 @@ a:hover {
 }
 
 .btn-primary {
-  @apply bg-primary-400 text-white-500 border-primary-500 hover:bg-primary-500  disabled:cursor-default disabled:bg-primary-300;
+  @apply bg-primary-400 text-basic-500 border-primary-500 hover:bg-primary-500  disabled:cursor-default disabled:bg-primary-300;
 }
 .btn-secondary {
-  @apply bg-secondary-400 text-white-500 border-secondary-500 hover:bg-secondary-500 disabled:cursor-default disabled:bg-secondary-300;
+  @apply bg-secondary-400 text-basic-500 border-secondary-500 hover:bg-secondary-500 disabled:cursor-default disabled:bg-secondary-300;
 }
 .btn-danger {
-  @apply bg-danger text-white-500 border-danger hover:bg-danger;
+  @apply bg-danger text-basic-500 border-danger hover:bg-danger;
 }
-.btn-white {
-  @apply bg-white-400 text-secondary-500 border-white-500 hover:bg-white-500;
+.btn-basic {
+  @apply bg-basic-400 text-secondary-500 border-basic-500 hover:bg-basic-500;
 }
 
 .btn-outline-secondary {
-  @apply text-secondary-500 border-2 border-secondary-500 hover:bg-secondary-500 hover:text-white-500 disabled:cursor-default disabled:bg-secondary-300;
+  @apply text-secondary-500 border-2 border-secondary-500 hover:bg-secondary-500 hover:text-basic-500 disabled:cursor-default disabled:bg-secondary-300;
 }
 
 .btn-outline-danger {
-  @apply text-danger border-2 border-danger hover:bg-danger hover:text-white-500 disabled:cursor-default disabled:bg-danger;
+  @apply text-danger border-2 border-danger hover:bg-danger hover:text-basic-500 disabled:cursor-default disabled:bg-danger;
 }
 
 h2 {
@@ -126,11 +126,11 @@ input:-webkit-autofill:active {
 }
 
 .dark-input {
-  @apply bg-white-900 rounded-lg py-2 px-4 w-full focus:outline-none;
+  @apply bg-basic-900 rounded-lg py-2 px-4 w-full focus:outline-none;
 }
 
 .light-input {
-  @apply bg-white-100 rounded-lg py-2 px-4 w-full focus:outline-none;
+  @apply bg-basic-100 rounded-lg py-2 px-4 w-full focus:outline-none;
 }
 
 .form-errors {
