fixed update recipes

--- a/frontend/src/app/properties/components/properties-list/properties-list.component.html
+++ b/frontend/src/app/properties/components/properties-list/properties-list.component.html
@@ -6,10 +6,10 @@
     [(ngModel)]="searchTerm"
     (keyup)="search()"
   />
-  <fa-icon
+  <!-- <fa-icon
     [icon]="faSearch"
     class="absolute top-2 right-0 px-4 fa-2x text-basic-900"
-  ></fa-icon>
+  ></fa-icon> -->
 </div>
 
 <div class="flex flex-row flex-wrap gap-2">
