--- a/frontend/src/app/recipes/components/formulation/formulation.component.html
+++ b/frontend/src/app/recipes/components/formulation/formulation.component.html
@@ -58,7 +58,7 @@
         *ngIf="selectedComposition"
         [fromFormulation]="true"
         [phasesPercentage]="selectedComposition.phases_percentage"
-        [componentArrayControl]="componentArrayControl"
+        [recipeComponentsArrayControl]="recipeComponentsArrayControl"
         [recipeComponents]="this.recipe.components"
       ></app-components>
     </div>
