--- a/frontend/src/app/components/components/components-phase/components-phase.component.html
+++ b/frontend/src/app/components/components/components-phase/components-phase.component.html
@@ -45,7 +45,7 @@
   >
     <div
       *ngIf="phaseComponentsForm?.errors?.maxAddition && fromFormulation"
-      class="text-xs font-bold form-errors"
+      class="text-xs font-bold form-errors px-2"
     >
       El porcentage de los componentes no debe superar al total asignado en la
       composición
