--- a/frontend/src/app/components/components/components/components.component.html
+++ b/frontend/src/app/components/components/components/components.component.html
@@ -1,7 +1,8 @@
 <div class="p-2">
   <div
     *ngIf="!fromFormulation && !fromRecipeDetails"
-    class="flex flex-row align-items-center w-full flex-wrap md:flex-nowrap p-3"
+    class="flex flex-row align-items-center w-full flex-wrap p-3"
+    [ngClass]="{ ' md:flex-nowrap': !fromFormulation && !fromRecipeDetails }"
   >
     <h2>Componentes</h2>
     <div class="flex flex-row justify-between w-full">
@@ -19,11 +20,26 @@
     </div>
   </div>
   <div
-    class="flex justify-between mx-auto my-0 relative grow shrink-0 basis-auto text-left flex-col md:flex-row"
+    class="flex justify-between mx-auto my-0 relative grow shrink-0 basis-auto text-left flex-col"
+    [ngClass]="{ ' md:flex-row': !fromFormulation && !fromRecipeDetails }"
   >
-    <div class="flex flex-col w-full md:w-[30%] lg:w-[20%] shrink-0">
-      <div class="md:sticky w-auto p-2 md:overflow-y-auto md:top-[10px]">
-        <div class="relative w-full md:w-[90%]">
+    <div
+      class="flex flex-col w-full shrink-0"
+      [ngClass]="{
+        'md:w-[30%] lg:w-[20%]': !fromFormulation && !fromRecipeDetails
+      }"
+    >
+      <div
+        class="md:sticky w-auto p-2 md:overflow-y-auto md:top-[10px]"
+        [ngClass]="{
+          'md:overflow-y-auto md:top-[10px]':
+            !fromFormulation && !fromRecipeDetails
+        }"
+      >
+        <div
+          class="relative w-full md:w-[90%]"
+          [ngClass]="{ 'md:w-[90%]': !fromFormulation && !fromRecipeDetails }"
+        >
           <input
             type="text"
             class="input-search"
@@ -31,17 +47,22 @@
             [(ngModel)]="searchTerm"
             (keyup)="search()"
           />
-          <fa-icon
+          <!-- <fa-icon
             [icon]="faSearch"
             class="absolute top-2 right-0 px-4 fa-2x text-basic-900"
-          ></fa-icon>
+          ></fa-icon> -->
         </div>
         <div class="w-full md:w-[90%]">
           <app-properties-list [filtering]="true"></app-properties-list>
         </div>
       </div>
     </div>
-    <div class="w-full md:w-[70%] lg:w-[80%] mx-auto my-0">
+    <div
+      class="w-full mx-auto my-0"
+      [ngClass]="{
+        'md:w-[70%] lg:w-[80%]': !fromFormulation && !fromRecipeDetails
+      }"
+    >
       <div *ngFor="let phase of phases">
         <app-components-phase
           [phase]="phase"
@@ -49,17 +70,11 @@
           [fromFormulation]="fromFormulation"
           [fromRecipeDetails]="fromRecipeDetails"
           [percentage]="getPhasePercentage(phase?.id)"
-          [componentArrayControl]="componentArrayControl"
+          [recipeComponentsArrayControl]="recipeComponentsArrayControl"
           [recipeComponents]="recipeComponents"
           [properties]="getProperties()"
         ></app-components-phase>
       </div>
-      <!-- <app-component-item
-        *ngFor="let component of components"
-        [component]="component"
-        [phase]="phases[0]"
-        [properties]="getPropertiesByComponent(component.properties)"
-      ></app-component-item> -->
     </div>
   </div>
 </div>
