update status redux

--- a/frontend/src/app/components/components/component-item/component-item.component.html
+++ b/frontend/src/app/components/components/component-item/component-item.component.html
@@ -8,7 +8,7 @@
       [ngStyle]="{
         color: percentage > 0 ? '#fff' : phase?.color
       }"
-      class="font-medium group-hover:!text-basic-500"
+      class="font-bold group-hover:!text-basic-500"
     >
       {{ component?.name }}
     </h4>
