--- a/frontend/src/app/user/components/user-configuration/user-configuration.component.html
+++ b/frontend/src/app/user/components/user-configuration/user-configuration.component.html
@@ -1,30 +1,32 @@
-<div class="p-2 flex flex-row limit-container">
-  <div id="nav-configuration">
-    <div class="pt-5 flex flex-col gap-4 text-right sticky">
+<button (click)="toggleTheme()">toggle</button>
+
+<div class="p-2 flex justify-between mx-auto my-0 relative grow shrink-0 basis-auto text-left flex-col md:flex-row">
+  <div class="flex flex-col w-full md:w-[30%] lg:w-[20%] shrink-0">
+    <div class="hidden md:flex flex-col justify-end text-right md:sticky w-auto p-2 md:overflow-y-auto md:top-[10px]">
       <a
-        class="cursor-pointer text-primary-500 hover:text-primary-900"
+        class="cursor-pointer text-primary-500 hover:text-primary-900 px-2 py-4"
         (click)="scroller.scrollToAnchor('personal-information')"
         >Información personal</a
       >
       <a
-        class="cursor-pointer text-primary-500 hover:text-primary-900"
+        class="cursor-pointer text-primary-500 hover:text-primary-900 px-2 py-4"
         (click)="scroller.scrollToAnchor('profiles')"
         >Perfiles</a
       >
       <a
-        class="cursor-pointer text-primary-500 hover:text-primary-900"
+        class="cursor-pointer text-primary-500 hover:text-primary-900 px-2 py-4"
         (click)="scroller.scrollToAnchor('configuration')"
         >Mi cuenta</a
       >
       <a
-        class="cursor-pointer text-primary-500 hover:text-primary-900"
+        class="cursor-pointer text-primary-500 hover:text-primary-900 px-2 py-4"
         (click)="scroller.scrollToAnchor('contact')"
         >Contacto</a
       >
     </div>
   </div>
-  <div class="w-full">
-    <div class="pt-5 vertical-border m-auto">
+  <div class="w-full md:w-[70%] lg:w-[80%] mx-auto my-0">
+    <div class="pt-5 vertical-border mx-auto">
       <section id="personal-information">
         <h2>Información personal</h2>
         <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
